2004-09-10  Yann Hodique  <Yann.Hodique@lifl.fr>

	* dotemacs.el
	(longlines): re-enabled with refill-mode

	* perso/patches.el:
	(scroll-preserve-screen-position): set to t

2004-09-09  Yann Hodique  <Yann.Hodique@lifl.fr>

	* dotemacs.el
	(multi-region-map): change keybinding (conflicted with usefull ones in LaTeX-mode)

2004-09-08  Yann Hodique  <Yann.Hodique@lifl.fr>

	* dotemacs.el:
	(doxymacs): workaround doxymacs-font-lock bug
	(my-LaTeX-hook): longlines is annoying as is, fix it later
	use muse if available

	* dotemacs-cust.el:
	(font-lock-keys-face): fix default foreground

	* perso/xcscope.el:
	initial checkin

2004-09-07  Yann Hodique  <Yann.Hodique@lifl.fr>

	* dotemacs.el:
	(ispell-program-name): use aspell
	use extended buffer menu

	* perso/def-face-const.el:
	initial checkin

	* perso/buff-menu+.el:
	initial checkin

2004-09-06  Yann Hodique  <Yann.Hodique@lifl.fr>

	* perso/tc.el:
	(tc-max-lines): move declaration to prevent warning

	* dotemacs.el:
	(require): more lispy extension

	* dotemacs-cust.el:
	(custom-set-variables): trivial-cite settings

	* perso/hl-line-hack.el:
	(global-hl-line-hack-mode): do not toggle any more

2004-08-30  Yann Hodique  <Yann.Hodique@lifl.fr>

	* perso/timerfunctions.el:
	initial checkin

2004-08-28  Yann Hodique  <Yann.Hodique@lifl.fr>

	* perso/xterm-extras.el:
	(xterm-extra-extra-keys): make DEL key work better

	* perso/tempo-lisp.el:
	renaming

	* perso/tempo-c++.el:
	renaming

	* perso/project.el:
	initial checkin

	* perso/pod.el:
	(pod-subseq): make it work

	* perso/patches.el:
	reordering, renaming
	(mapcond): new function
	(clear-hook): new function
	(facep): re-enabled face generation for minibuffer if needed
	(yh/completion-setup-function):

	* perso/mycompletion.el:
	renaming

	* perso/idledo.el:
	initial checkin

	* perso/mycode.el:
	more requirements, some reordering
	(c-mode-common-hook): refactoring

	* perso/dircolors.el:
	remove useless code

	* emacs.d/emacs-d-vars.el: