@@ -1,3 +1,8 @@
+2004-09-14  Yann Hodique  <Yann.Hodique@lifl.fr>
+
+	* dotemacs.el
+	(tramp): use the correct package
+
 2004-09-10  Yann Hodique  <Yann.Hodique@lifl.fr>
 
 	* dotemacs.el
